--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/**/*"
+    "**/*/excalidraw.d.ts",
+    "types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
